--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -22,7 +22,7 @@
             align-items: center;
             height: 80vh;
         }
-       
+      
        
         .logBtn {
             text-decoration: none;
@@ -99,7 +99,7 @@
             <p>{{ form.password1.label }} {{ form.password1 }}</p>
             <p>{{ form.password2.label }} {{ form.password2 }}</p>
             <p>Already have an Account? <a href='/accounts/login'>Sign In</a></p>
-            <button type="submit">
+            <button type="submit">Register</button>
         </form>
         
     </main>
