--- a/staff/templates/staff.html
+++ b/staff/templates/staff.html
@@ -159,7 +159,8 @@
         <a href="{% url 'staff_home' %}">Home</a>
         <a href="{% url 'tables' %}">Tables</a>
         <a href="{% url 'dishes' %}">Dishes</a>
-        <a href="{% url 'booking_statistics' %}">Reports</a>
+        <a href="{% url 'reports' %}">Reports</a>
+        <a href="{% url 'booking_statistics' %}">Insights</a>
       </nav>
     </header>
 
